--- a/test/fixtures/routes.yml
+++ b/test/fixtures/routes.yml
@@ -1,15 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  operation: MyString
-  source_location: MyString
-  destination_location: MyString
-  transport: MyString
-  sale: 1
+  name: MyString
+  start_location: MyString
+  end_location: MyString
+  distance: 9.99
 
 two:
-  operation: MyString
-  source_location: MyString
-  destination_location: MyString
-  transport: MyString
-  sale: 1
+  name: MyString
+  start_location: MyString
+  end_location: MyString
+  distance: 9.99
